--- a/index.html
+++ b/index.html
@@ -1,157 +1,115 @@
 <!DOCTYPE html>
-<html>    
+<html>
 <title>ninjaman</title>
-<style type 'text/css'>
-    *{  margin: 0;
-        padding: 0;
-     }
-     .row{
-         line-height: 0px;
-     }
-    .wall{
-        background-color:blue;
-        height : 40px;
-        width: 40px;
-        display: inline-block;
-    }
-    .sushi {
-        background-color: black;
-        height: 40px;
-        width: 40px;
-        display: inline-block;
-        background-image: url('sushi.png');
-        background-size: contain;
-    }
-    .blank {
-        background-color: black;
-        height: 40px;
-        width: 40px;
-        display: inline-block;
-    }
-    .onigiri {
-        background-color: black;
-        height: 40px;
-        width: 40px;
-        display: inline-block;
-        background-image: url('onigiri.png');
-        background-size: contain;
-    }
-    #ninjaman {
-        background-color: black;
-        height: 40px;
-        width: 40px;
-        display: inline-block;
-        background-image: url('ninja.gif');
-        background-size: contain;
-        position: absolute;
-        left: 40px;
-        top: 40px;
-    }
-    #score {
-        font-size: 40px;
-        font-family: 'Courier New', Courier, monospace;
-        color:purple;
-    }
+<link rel="stylesheet" type='text/css' href="style.css">
 
-</style>
 <body>
     <div id='world'></div>
     <div id='ninjaman'></div>
 </body>
 <Script>
-var score = 0;
-var world = [
-    [1,1,1,1,1,1,1,1,1,1,1,1,1,1],
-    [1,0,2,2,2,3,1,1,2,1,3,1,3,1],
-    [1,2,1,3,1,3,1,1,2,1,3,1,3,1],
-    [1,2,2,3,2,3,1,1,2,1,3,1,3,1],
-    [1,2,2,2,2,3,1,1,2,1,3,1,3,1],
-    [1,2,1,3,1,3,3,3,2,2,3,2,3,1],
-    [1,2,2,3,2,3,1,1,2,1,3,1,3,1],
-    [1,2,2,2,2,3,1,1,2,1,3,1,3,1],
-    [1,2,1,3,1,3,1,1,2,1,3,1,3,1],
-    [1,2,2,3,2,3,1,1,2,1,3,1,3,1],
-    [1,1,1,1,1,1,1,1,1,1,1,1,1,1]
-];
-var worldDict={
-    0:'blank',
-    1: 'wall',
-    2: 'sushi',
-    3: 'onigiri'
-}
-function drawWorld(){
-    out = '';
-    for(var row = 0; row <world.length; row++){
-        out += "<div class = 'row'>"
-        for (var x = 0; x< world[row].length;x++){
-            out += "<div class = '" + worldDict[world[row][x]]
-            + "'></div>"
-        }
-        out += "</div>"
+    var score = 0;
+    var world = [];
+    var worldDict = {
+        0: 'blank',
+        1: 'wall',
+        2: 'sushi',
+        3: 'onigiri'
     }
-    document.getElementById('world').innerHTML = out;
+    function genWorld() {
+        world.push([1, 1, 1, 1, 1, 1, 1, 1, 1, 1]);
 
-}
-drawWorld();
-var ninjaman = {
-    x:1,
-    y:1
-}
-function drawNinjaman(){
-    document.getElementById('ninjaman').style.top = ninjaman.y * 40 + 'px'
-    document.getElementById('ninjaman').style.left =ninjaman.x * 40 + 'px'
-}
-document.onkeydown = function(e){console.log(e.keyCode);
-    if(e.keyCode == 37){
-        ninjaman.x--
-        if (world[ninjaman.y][ninjaman.x] == 1)
-        {
-            ninjaman.x++
+        for (var i = 0; i < 10; i++) {
+            var arr = [];
+            for (var j = 0; j < world[0].length; j++) {
+                var random = Math.floor((Math.random() * 4) + 1) -1;
+                arr.push(random);
+            }
+            world.push(arr);
+
+
         }
-    }
-    if(e.keyCode == 39){
-        ninjaman.x++
-        if (world[ninjaman.y][ninjaman.x] == 1)
-        {
-            ninjaman.x--
+        for (var x = 0; x < world.length; x++) {
+            if (world[x][0] == world[x][0]) {
+                world[x][0] = 1;
+            }
+            if (world[x][9] == world[x][9]) {
+                world[x][9] = 1;
+            }
         }
+        world.push([1, 1, 1, 1, 1, 1, 1, 1, 1, 1]);
     }
-    if(e.keyCode == 38){
-        ninjaman.y--
-        if (world[ninjaman.y][ninjaman.x] == 1)
-        {
-            ninjaman.y++
+    function drawWorld() {
+        out = '';
+        for (var row = 0; row < world.length; row++) {
+            out += "<div class = 'row'>"
+            for (var x = 0; x < world[row].length; x++) {
+                out += "<div class = '" + worldDict[world[row][x]]
+                    + "'></div>"
+            }
+            out += "</div>"
         }
+        document.getElementById('world').innerHTML = out;
+
     }
-    if(e.keyCode == 40){
-        ninjaman.y++
-        if (world[ninjaman.y][ninjaman.x] == 1)
-        {
-            ninjaman.y--
-        }
-    }
-    if (world[ninjaman.y][ninjaman.x] == 2){
-    world[ninjaman.y][ninjaman.x] = 0;
-    score = score+10;
-    drawNinjaman();
+    genWorld();
     drawWorld();
-    document.getElementById('score').innerHTML ="the score is: " + score;
+    var ninjaman = {
+        x: 1,
+        y: 1
     }
-    else if (world[ninjaman.y][ninjaman.x] == 3)
-    {
-        world[ninjaman.y][ninjaman.x] = 0
-        score= score+5;
-        drawNinjaman();
-        drawWorld();
-        document.getElementById('score').innerHTML = "the score is: " + score;
+    function drawNinjaman() {
+        document.getElementById('ninjaman').style.top = ninjaman.y * 40 + 'px'
+        document.getElementById('ninjaman').style.left = ninjaman.x * 40 + 'px'
     }
-    else if ( world[ninjaman.y][ninjaman.x] == 0){
-        world[ninjaman.y][ninjaman.x] = 0;
-        drawNinjaman();
-        drawWorld();
+    document.onkeydown = function (e) {
+        console.log(e.keyCode);
+        if (e.keyCode == 37) {
+            ninjaman.x--
+            if (world[ninjaman.y][ninjaman.x] == 1) {
+                ninjaman.x++
+            }
+        }
+        if (e.keyCode == 39) {
+            ninjaman.x++
+            if (world[ninjaman.y][ninjaman.x] == 1) {
+                ninjaman.x--
+            }
+        }
+        if (e.keyCode == 38) {
+            ninjaman.y--
+            if (world[ninjaman.y][ninjaman.x] == 1) {
+                ninjaman.y++
+            }
+        }
+        if (e.keyCode == 40) {
+            ninjaman.y++
+            if (world[ninjaman.y][ninjaman.x] == 1) {
+                ninjaman.y--
+            }
+        }
+        if (world[ninjaman.y][ninjaman.x] == 2) {
+            world[ninjaman.y][ninjaman.x] = 0;
+            score = score + 10;
+            drawNinjaman();
+            drawWorld();
+            document.getElementById('score').innerHTML = "the score is: " + score;
+        }
+        else if (world[ninjaman.y][ninjaman.x] == 3) {
+            world[ninjaman.y][ninjaman.x] = 0
+            score = score + 5;
+            drawNinjaman();
+            drawWorld();
+            document.getElementById('score').innerHTML = "the score is: " + score;
+        }
+        else if (world[ninjaman.y][ninjaman.x] == 0) {
+            world[ninjaman.y][ninjaman.x] = 0;
+            drawNinjaman();
+            drawWorld();
+        }
     }
-}
 //keep score sushi-10pts onigiri -5pts
 </Script>
-<p id = "score"></p>
+<p id="score"></p>
+
 </html>
