--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
     <div id='world'></div>
     <div id='ninjaman'></div>
+    <div id='bluey'></div>
+    <div id="red"></div>
 </body>
 <script src="script.js"></script>
 <p id="score"></p>
